@@ -53,6 +53,8 @@ Web Front End Changes
   on the "Edit Amazon Web Services Settings" page. (RBL-3126)
 * The "rBuilder Catalog for EC2" page now contains a link to the EC2
   documentation. (RB-3127)
+* Fixed a bug where the "rBuilder Catalog for EC2" was being blocked by
+  the adblock extension on Firefox 3. (RBL-3123)
 
 
 Changes in 4.1.1
